<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="op1">Op1</string>
    <string name="op2">Op2</string>
    <string name="sum">SUM</string>
</resources>